<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/channel_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.bcm.messenger.common.ui.CommonGradientLayout
                android:id="@+id/channel_header_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/common_contacts_dialog_top_bg">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/common_30_transparent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <com.bcm.messenger.adhoc.component.AdHocSessionAvatar
                    android:id="@+id/channel_avatar_layout"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="80dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <com.bcm.messenger.common.ui.emoji.EmojiTextView
                    android:id="@+id/channel_control_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="40dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxWidth="300dp"
                    android:maxLines="1"
                    android:textColor="@color/common_color_white"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/channel_avatar_layout"
                    tools:text="Tom Bostae" />

            </com.bcm.messenger.common.ui.CommonGradientLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="-10dp"
                android:background="@drawable/chats_group_control_circle_background">
                <LinearLayout
                    android:id="@+id/adhoc_group_members_item"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:includeFontPadding="false"
                        android:lines="1"
                        android:paddingStart="15dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="0dp"
                        android:paddingBottom="10dp"
                        android:text="@string/adhoc_airchat_setting_members"
                        android:textColor="@color/common_color_black"
                        android:textSize="17sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/adhoc_group_member_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:includeFontPadding="false"
                        android:textSize="17sp"
                        android:textColor="@color/common_content_second_color"
                        tools:text="40 members " />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="15dp"
                        android:src="@drawable/common_right_icon"
                        android:tint="?attr/common_text_third_color" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/group_member_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/common_color_white" />

                <com.bcm.messenger.common.ui.CommonSettingItem
                    android:id="@+id/channel_invite_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/common_item_ripple_transparent_bg"
                    app:setting_item_line="false"
                    app:setting_item_name="@string/adhoc_invite_join_title"
                    app:setting_item_right="arrow" />

                <com.bcm.messenger.common.ui.CommonSettingItem
                    android:id="@+id/channel_pin_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/common_item_ripple_transparent_bg"
                    app:setting_item_line="true"
                    app:setting_item_head="@string/adhoc_channel_settiong_action_title"
                    app:setting_item_name="@string/adhoc_channel_setting_pin_title"
                    app:setting_item_right="none"
                    app:setting_item_switch="off"/>

                <com.bcm.messenger.common.ui.CommonSettingItem
                    android:id="@+id/channel_mute_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/common_item_ripple_transparent_bg"
                    app:setting_item_line="false"
                    app:setting_item_name="@string/adhoc_channel_setting_mute_title"
                    app:setting_item_right="none"
                    app:setting_item_switch="off"/>

                <com.bcm.messenger.common.ui.CommonSettingItem
                    android:id="@+id/channel_clear_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/common_item_ripple_transparent_bg"
                    app:setting_item_line="false"
                    app:setting_item_head="@string/adhoc_channel_settiong_footprint_title"
                    app:setting_item_name="@string/adhoc_channel_setting_clear_title"
                    app:setting_item_right_custom="@drawable/chats_group_setting_clear_history_icon"
                    app:setting_item_right="none"/>

                <com.bcm.messenger.common.ui.CommonSettingItem
                    android:id="@+id/channel_leave_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/common_item_ripple_transparent_bg"
                    app:setting_item_line="false"
                    app:setting_item_name="@string/adhoc_channel_setting_leave_title"
                    app:setting_item_head="@string/adhoc_channel_settiong_others_title"
                    app:setting_item_right="none"
                    app:setting_item_right_custom="@drawable/adhoc_channel_leave_icon"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.bcm.messenger.common.ui.CommonTitleBar2
        android:id="@+id/channel_setting_title"
        style="@style/CommonTitleBarStyle"
        android:layout_gravity="top"/>

</merge>